Implement Operation WIP